--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Number::Bytes::Human.
 
+0.04 Tue Oct  5 2005
+         - now default suffix for kilobytes (base 1000) is 'k', not 'K'
+         - now 'suffixes' option support 1024, 1000, si_1024, and si_1000
+
 0.03 Tue Oct  4 2005
         - some idle changes, like fixing 'si' option behavior
         - added new test "t/06si.t"
