--- a/README
+++ b/README
@@ -1,8 +1,14 @@
-Number::Bytes::Human 0.03
+Number::Bytes::Human 0.04
 
 * we need a real README
 * finish docs
 * include memoizing
 * write a benchmark: unmemoized vs. memoized vs. object
 * (maybe) include POD coverage test 
+
+What I update when releasing 
+* Human.pm $VERSION
+* README first line
+* META.yml version
+* add new entries to Changes
 
