--- a/Changes
+++ b/Changes
@@ -1,6 +1,15 @@
 Revision history for Perl extension Number::Bytes::Human.
 
-0.05 Tue Oct 25 2006
+0.06 Thu Oct 26 2006
+          - Martin Ward pointed to me:
+            * [FIX] the SI prefix for bytes in base 1024 is still 'B', 
+              not 'iB'
+            * floppy disk manufacturers count in units of 1024000 (for
+              their "1.44 MB" disks) [NEW OPTION: bs => 1024000]
+          - in the OO code, indirect notation "new Number::Bytes::Human"
+            was replaced by "Number::Bytes::Human->new"
+
+0.05 Wed Oct 25 2006
          - nothing new here
          - added taint checking to tests "#!perl -T\n"
 
